k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-mongo2
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: demo-mongo2-dev.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-mongo2
                port:
                  number: 3000
  tls:
    - hosts:
        - demo-mongo2-dev.127.0.0.1.nip.io
      secretName: demo-mongo2-dev.127-0.0.1.nip.io-tls # will be auto created
